--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Constructive &amp; Co.</h1>
     <script src="add-content.js"></script>
+    <!-- <script>document.write('<h3>Welcome!</h3>');</script> -->
     <p>For all orders and inquiries please call
     <em>555-3344</em></p>
 </body>
